# echo-orchestrator

./: .gitignore  PROJECT_STRUCTURE.md  README.md  pyproject.toml  run_terminal_bench_eval.sh
src/agents/: orchestrator_agent.py  subagent.py
src/agents/actions/: file_manager.py  orchestrator_hub.py  search_manager.py  state_managers.py
src/agents/actions/entities/: actions.py  context.py  subagent_report.py  task.py
src/agents/actions/parsing/: action_handler.py  parser.py
src/agents/env_interaction/: command_executor.py  turn_executor.py
src/agents/env_interaction/entities/: conversation_history.py  execution_result.py  turn.py
src/agents/state/: orchestrator_state.py
src/agents/system_msgs/: system_msg_loader.py
src/agents/system_msgs/md_files/: coder_sys_msg_v0.1.md  explorer_sys_msg_v0.1.md  orchestrator_sys_msg_v0.1.md
src/agents/utils/: llm_client.py
src/misc/: log_setup.py  turn_logger.py
tests/: test_action_parser.py  test_lead_architect_real.py  test_subagent_real.py
